[gd_scene load_steps=5 format=3 uid="uid://lmdupea46mc5"]

[ext_resource type="Script" uid="uid://cy2t47jro1l6d" path="res://Game/character_body_2d.gd" id="1_pjt0s"]
[ext_resource type="Texture2D" uid="uid://ua4v1jbf0f11" path="res://assets/player1.png" id="2_wa5vi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_80nbo"]
radius = 31.016125

[sub_resource type="CircleShape2D" id="CircleShape2D_feb5d"]
radius = 42.107006

[node name="CharacterBody2D" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_pjt0s")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_wa5vi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_80nbo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_feb5d")

[node name="SelectedFood" type="Sprite2D" parent="."]
unique_name_in_owner = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
